--- a/pizza-food/index.html
+++ b/pizza-food/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="mainContainer">
@@ -51,9 +51,52 @@
 
         <!--Carts-->
         <div class="cartContainer">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+
+            <!--pizza-->
+            <div class="card">
+                <div class="imageContainer">
+                    <img src="./assets/img/pizza1.png" alt="">
+                </div>
+                <p class="cardHeader">Cheese Lovers</p>
+                <p class="cardInfo">Combination of Alfredo sauce and two cheeses- Romano, and Parmesan
+
+                </p>
+                <p class="price">$20.000</p>
+                <select name="" id="">
+                    <option value="regular" selected>Regular</option>
+                </select>
+                <button class="addToCard addButton">ADD TO CART</button>
+            </div>
+            <div class="card">
+                 <div class="imageContainer">
+                    <img src="./assets/img/pizza2.png" alt="">
+                </div>
+                <p class="cardHeader">Cheese Lovers</p>
+                <p class="cardInfo">Combination of Alfredo sauce and two cheeses- Romano, and Parmesan
+
+                </p>
+                <p class="price">$20.000</p>
+                <select name="" id="">
+                    <option value="regular" selected>Regular</option>
+                </select>
+                <button class="addToCard addButton">ADD TO CART</button>
+            
+            </div>
+            <div class="card">
+                 <div class="imageContainer">
+                    <img src="./assets/img/pizza3.png" alt="">
+                </div>
+                <p class="cardHeader">Cheese Lovers</p>
+                <p class="cardInfo">Combination of Alfredo sauce and two cheeses- Romano, and Parmesan
+
+                </p>
+                <p class="price">$20.000</p>
+                <select name="" id="">
+                    <option value="regular" selected>Regular</option>
+                </select>
+                <button class="addToCard addButton">ADD TO CART</button>
+            
+            </div>
         </div>
 
         <div class="abs1">
